--- a/examples/test2.html
+++ b/examples/test2.html
@@ -9,13 +9,21 @@
     </div>
 
     <script>
+        var parent = d3.select("body").select("#cont");
+
+        var svg = parent.append("svg")
+            .attr("width", 500)
+            .attr("height", 500);
+        var scale = 5;
+
         var jointFcn = function(j) {
             j.append("circle")
             .attr("cx", function (d) {
-                return d.x;
+                // console.log(d);
+                return d.x * scale + 10;
             })
             .attr("cy", function (d) {
-                return d.y;
+                return d.y * scale + 200;
             })
             .attr("r", function (d, i) {
                     return 2;
@@ -26,12 +34,15 @@
             .attr("opacity", 0.9);
         };
 
+
+
         var fig = MovaViz('FirstOne')
             .debug(true)
             .data('http://www.sfu.ca/~oalemi/data/35_01.bvh','bvh')
-            .frameSkip(10)
-            .drawJoints(jointFcn)
-            ;
+            .container(svg);
+  
+        
+        fig.addDrawMethod(jointFcn, 'joint-positions');
             
     </script>
 </body>
